2000-02-21  K.J. Paradise <kj@sourcegear.com>

	* history.c mkmodules.c parseinfo.c: control which actions
	get logged to the cvs history file via CVSROOT/config file
	and LogHistory keyword.

2000-02-18  Karl Fogel  <kfogel@red-bean.com>

	* history.c (history_write): don't die if history file not
	writable, just warn (unless `really_quiet') and skip out.

	* main.c (main): don't bother checking if history file is
	writable.

	* server.c (serve_root): same.

2000-02-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (perms symlinks symlinks2 hardlinks): Don't run by
	default since PreservePermissions code is now disabled.

2000-02-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (import-113): Revise to match Jim Meyering's fix.

2000-02-16  Larry Jones  <larry.jones@sdrc.com>

	* add.c (add): Don't allow adding files or directories to Emptydir.
	(Patch submitted by Chris Cameron <chris.cameron@ot.co.nz>.)
	* sanity.sh (emptydir): Revise (emptydir-7 and emptydir-8) for this.

2000-02-16  Jim Meyering  <meyering@lucent.com>

	* update.c (join_file): Correct typo in diagnostic:
	change `file %s is present...' to `file %s is not present...'.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* parseinfo.c (Parse_Info): Treat matching lines with bad expansions
	as errors rather than just ignoring.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* edit.c (edit): Check for invalid characters in hostname and CurDir.
	(Reported by "Andrew S. Townley" <atownley@informix.com>.)
	* sanity.sh (devcom2): New tests for above.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* cvs.h: Always #include "server.h" to prevent compile errors when
	neither CLIENT_SUPPORT nor SERVER_SUPPORT is defined.
	(Reported by "Crow, Ian" <ian.crow@linklaters.com>.)
	* log.c (send_one, send_arg_list): Only define when CLIENT_SUPPORT
	is defined to prevent link errors.

	* server.c (server): Always create a new temporary directory, don't